# robo-platform-android

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/res/layout/: activity_car_manual_control.xml  activity_controller_server.xml  activity_drone_racing.xml  activity_flight_control.xml  activity_main.xml  activity_native_test.xml  activity_record_all.xml  activity_record_sensors.xml  activity_settings.xml  activity_test.xml  activity_usb_controller.xml  bt_peer_item.xml  fragment_bluetooth_req.xml  fragment_control_panel.xml  fragment_front_panel.xml  fragment_hotspot_req.xml  fragment_location_req.xml  fragment_permission_req.xml  fragment_recording.xml  fragment_requirement_list_item.xml  fragment_requirements.xml  fragment_sensor_info.xml  fragment_sensor_record.xml  fragment_sensors_list.xml  fragment_serial_trans.xml  fragment_server_wait_conn.xml  fragment_usb_req.xml  fragment_wi_net_req.xml  fragment_wireless_conn_front_panel.xml  sensor_group.xml  sensor_item.xml  sensor_not_available.xml  sensors_list_fragment.xml  z_activity_main2.xml  z_activity_record_sensors.xml  z_activity_requirements.xml  z_activity_robo_controller.xml  z_fragment_front_panel.xml  z_fragment_hotspot_req.xml  z_fragment_requirement_list.xml
app/src/main/res/layout-land/: fragment_recording.xml
gradle/wrapper/: gradle-wrapper.properties
pseudorange/: build.gradle
usbserial/: build.gradle  local.properties
(+113 files in other folders)
